--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,31 +1,5 @@
-<nav id="logobar" class="navbar navbar-expand-sm d-none d-sm-block">
-  <div class="container">
-    <div class="navbar-nav m-auto">
-      <span class="team-flag ASSE"></span>
-      <span class="team-flag ANG"></span>
-      <span class="team-flag ASM"></span>
-      <span class="team-flag ASNL"></span>
-      <span class="team-flag BAS"></span>
-      <span class="team-flag BDX"></span>
-      <span class="team-flag CAEN"></span>
-      <span class="team-flag DFCO"></span>
-      <span class="team-flag EAG"></span>
-      <span class="team-flag LOR"></span>
-      <span class="team-flag LOSC"></span>
-      <span class="team-flag METZ"></span>
-      <span class="team-flag MONT"></span>
-      <span class="team-flag NAN"></span>
-      <span class="team-flag OGCN"></span>
-      <span class="team-flag OL"></span>
-      <span class="team-flag OM"></span>
-      <span class="team-flag PSG"></span>
-      <span class="team-flag REN"></span>
-      <span class="team-flag TFC"></span>
-    </div>
-  </div>
-</nav>
 <nav id="menu" class="navbar navbar-expand-md navbar-dark">
-  <a routerLink="" class="navbar-brand"><img src="./assets/logoname3.png" alt=""></a>
+  <a routerLink="" class="navbar-brand"><img src="./assets/hello-logo.png" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#AngularNav" aria-control="AngularNav" aria-expanded="false" aria-label="Angular Navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
