--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,7 +5,7 @@ html, body {
   height: 100%;
   max-height: 100%;
   background-color: #dbfedb;
-  background-image: url("./assets/wallpaper4.jpg");
+  background-image: url("./assets/wallpaper.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
