--- a/client/src/app/navbar/navbar.component.scss
+++ b/client/src/app/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
   &.navbar {
     padding-top: 0;
     padding-bottom: 0;
-    background-color: #cfcfcf4d;
+    background-color: #0009;
 
     .nav-link.btn {
       border-radius: 0;
@@ -20,7 +20,7 @@
   }
 
   a {
-    margin-left: 10px;
+    //margin-left: 10px;
   }
 
 }
