--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,20 +1,23 @@
 <div class="login_panel">
   <div class="card m-auto">
     <div class="card-body">
-      <form class="login_form">
-        <h3 class="card-title text-center">Connexion</h3>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <h3 class="card-title text-center">CONNEXION</h3>
         <div class="form-group">
           <div class="inner-addon left-addon">
             <i class="material-icons">person</i>
-            <input type="text" class="form-control" placeholder="Pseudo" />
-            <div class="inner-addon left-addon">
-              <i class="material-icons">lock</i>
-              <input type="password" class="form-control" placeholder="Mot de passe">
-            </div>
+            <input type="text" class="form-control" formControlName="login" placeholder="Pseudo" />
           </div>
         </div>
-        <button type="submit" class="btn btn-success">Connexion</button>
+        <div class="form-group">
+          <div class="inner-addon left-addon">
+            <i class="material-icons">lock</i>
+            <input type="password" class="form-control" formControlName="password" placeholder="Mot de passe">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-success" [disabled]="!loginForm.valid">Connexion</button>
       </form>
+      <img src="../../assets/login5.png">
     </div>
   </div>
 </div>
