--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav id="menu" class="navbar navbar-expand-md navbar-dark">
+<nav id="menu" class="navbar navbar-expand-md">
   <a routerLink="" class="navbar-brand"><img src="./assets/hello-logo.png" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#AngularNav" aria-control="AngularNav" aria-expanded="false" aria-label="Angular Navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,6 +10,9 @@
       </li>
     </ul>
     <ul class="navbar-nav">
+      <li class="nav-item">
+        <a routerLink="signup" routerLinkActive="active" class="nav-link btn btn-outline-success">Inscription</a>
+      </li>
       <li class="nav-item">
         <a routerLink="login" routerLinkActive="active" class="nav-link btn btn-outline-success">Login</a>
       </li>
