--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,11 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
 @import 'assets/fonts/material-icons/material-icons';
+@import '~ngx-toastr/toastr';
+// @import '~ngx-toastr/toastr-bs4-alert'; // bootstrap style toast
 
 html, body {
   height: 100%;
   max-height: 100%;
   background-color: #dbfedb;
-  background-image: url("./assets/wallpaper.jpg");
+  //background-image: url("./assets/wallpaper.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
